--- a/kalima-platform/frontend/src/index.css
+++ b/kalima-platform/frontend/src/index.css
@@ -92,3 +92,15 @@
 .scanner-active {
   background: transparent !important;
 }
+.aspect-w-16 {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.aspect-w-16 > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
